--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>io.mateu.travel</groupId>
   <artifactId>all</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>all</name>
   <url>http://maven.apache.org</url>
@@ -13,6 +13,11 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+
+  <modules>
+    <module>core</module>
+    <module>backend</module>
+  </modules>
 
   <dependencies>
     <dependency>
