--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,7 +11,7 @@
     <groupId>io.mateu.travel</groupId>
     <artifactId>core</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>core</name>
+    <name>mateu-travel.core</name>
     <description>core</description>
     <properties>
         <java.version>17</java.version>
@@ -23,15 +23,25 @@
         </dependency>
 
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <!--
+            <scope>runtime</scope>
+            -->
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
+        -->
     </dependencies>
 
     <build>
