temporary disable r2dbc due to conflict with jpa

--- a/backoffice/modulith/src/main/resources/application.yml
+++ b/backoffice/modulith/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: backoffice
   config:
     import:
-      - classpath:milter-properties.yml
+#      - classpath:milter-properties.yml
 #      - classpath:properties/kafka.yml
   codec:
     max-in-memory-size: 30MB
