add openjpa l2 cache sync stuff

--- a/backoffice/modulith/src/main/resources/application.yml
+++ b/backoffice/modulith/src/main/resources/application.yml
@@ -5,5 +5,6 @@ spring:
     import:
 #      - classpath:milter-properties.yml
 #      - classpath:properties/kafka.yml
+      - classpath:openjpa.yml
   codec:
     max-in-memory-size: 30MB
