fix milter replacements

--- a/backoffice/modulith/src/main/resources/application-local.yml
+++ b/backoffice/modulith/src/main/resources/application-local.yml
@@ -10,11 +10,13 @@ spring:
     max-in-memory-size: 30MB
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/busso?loglevel=1
-    username: postgres
-    password: none
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password: password
+    driver-class-name: org.h2.Driver
 
   jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
     show-sql: true
